logs/error-2022-04-16-19.log
{
  error: /Users/suvamgayen/My Project/go-mart-backend/controller/payment.controller.js:28
          const newOrderResult = await newOrder.save();
                                 ^^^^^
  
  SyntaxError: await is only valid in async function
      at wrapSafe (internal/modules/cjs/loader.js:984:16)
      at Module._compile (internal/modules/cjs/loader.js:1032:27)
      at Object.Module._extensions..js (internal/modules/cjs/loader.js:1097:10)
      at Module.load (internal/modules/cjs/loader.js:933:32)
      at Function.Module._load (internal/modules/cjs/loader.js:774:14)
      at Module.require (internal/modules/cjs/loader.js:957:19)
      at require (internal/modules/cjs/helpers.js:88:18)
      at Object.<anonymous> (/Users/suvamgayen/My Project/go-mart-backend/routes/payment.router.js:6:23)
      at Module._compile (internal/modules/cjs/loader.js:1068:30)
      at Object.Module._extensions..js (internal/modules/cjs/loader.js:1097:10)
      at Module.load (internal/modules/cjs/loader.js:933:32)
      at Function.Module._load (internal/modules/cjs/loader.js:774:14)
      at Module.require (internal/modules/cjs/loader.js:957:19)
      at require (internal/modules/cjs/helpers.js:88:18)
      at Object.<anonymous> (/Users/suvamgayen/My Project/go-mart-backend/app.js:39:21)
      at Module._compile (internal/modules/cjs/loader.js:1068:30),
  level: 'error',
  message: 'uncaughtException: await is only valid in async function\n' +
    '/Users/suvamgayen/My Project/go-mart-backend/controller/payment.controller.js:28\n' +
    '        const newOrderResult = await newOrder.save();\n' +
    '                               ^^^^^\n' +
    '\n' +
    'SyntaxError: await is only valid in async function\n' +
    '    at wrapSafe (internal/modules/cjs/loader.js:984:16)\n' +
    '    at Module._compile (internal/modules/cjs/loader.js:1032:27)\n' +
    '    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1097:10)\n' +
    '    at Module.load (internal/modules/cjs/loader.js:933:32)\n' +
    '    at Function.Module._load (internal/modules/cjs/loader.js:774:14)\n' +
    '    at Module.require (internal/modules/cjs/loader.js:957:19)\n' +
    '    at require (internal/modules/cjs/helpers.js:88:18)\n' +
    '    at Object.<anonymous> (/Users/suvamgayen/My Project/go-mart-backend/routes/payment.router.js:6:23)\n' +
    '    at Module._compile (internal/modules/cjs/loader.js:1068:30)\n' +
    '    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1097:10)\n' +
    '    at Module.load (internal/modules/cjs/loader.js:933:32)\n' +
    '    at Function.Module._load (internal/modules/cjs/loader.js:774:14)\n' +
    '    at Module.require (internal/modules/cjs/loader.js:957:19)\n' +
    '    at require (internal/modules/cjs/helpers.js:88:18)\n' +
    '    at Object.<anonymous> (/Users/suvamgayen/My Project/go-mart-backend/app.js:39:21)\n' +
    '    at Module._compile (internal/modules/cjs/loader.js:1068:30)',
  stack: '/Users/suvamgayen/My Project/go-mart-backend/controller/payment.controller.js:28\n' +
    '        const newOrderResult = await newOrder.save();\n' +
    '                               ^^^^^\n' +
    '\n' +
    'SyntaxError: await is only valid in async function\n' +
    '    at wrapSafe (internal/modules/cjs/loader.js:984:16)\n' +
    '    at Module._compile (internal/modules/cjs/loader.js:1032:27)\n' +
    '    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1097:10)\n' +
    '    at Module.load (internal/modules/cjs/loader.js:933:32)\n' +
    '    at Function.Module._load (internal/modules/cjs/loader.js:774:14)\n' +
    '    at Module.require (internal/modules/cjs/loader.js:957:19)\n' +
    '    at require (internal/modules/cjs/helpers.js:88:18)\n' +
    '    at Object.<anonymous> (/Users/suvamgayen/My Project/go-mart-backend/routes/payment.router.js:6:23)\n' +
    '    at Module._compile (internal/modules/cjs/loader.js:1068:30)\n' +
    '    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1097:10)\n' +
    '    at Module.load (internal/modules/cjs/loader.js:933:32)\n' +
    '    at Function.Module._load (internal/modules/cjs/loader.js:774:14)\n' +
    '    at Module.require (internal/modules/cjs/loader.js:957:19)\n' +
    '    at require (internal/modules/cjs/helpers.js:88:18)\n' +
    '    at Object.<anonymous> (/Users/suvamgayen/My Project/go-mart-backend/app.js:39:21)\n' +
    '    at Module._compile (internal/modules/cjs/loader.js:1068:30)',
  exception: true,
  date: 'Sat Apr 16 2022 19:59:35 GMT+0530 (India Standard Time)',
  process: {
    pid: 5818,
    uid: 501,
    gid: 20,
    cwd: '/Users/suvamgayen/My Project/go-mart-backend',
    execPath: '/usr/local/bin/node',
    version: 'v14.17.0',
    argv: [
      '/usr/local/bin/node',
      '/Users/suvamgayen/My Project/go-mart-backend/app.js'
    ],
    memoryUsage: {
      rss: 62865408,
      heapTotal: 35508224,
      heapUsed: 22458784,
      external: 20062836,
      arrayBuffers: 18505342
    }
  },
  os: {
    loadavg: [ 2.75830078125, 2.76806640625, 2.7177734375 ],
    uptime: 14354
  },
  trace: [
    {
      column: 16,
      file: 'internal/modules/cjs/loader.js',
      function: 'wrapSafe',
      line: 984,
      method: null,
      native: false
    },
    {
      column: 27,
      file: 'internal/modules/cjs/loader.js',
      function: 'Module._compile',
      line: 1032,
      method: '_compile',
      native: false
    },
    {
      column: 10,
      file: 'internal/modules/cjs/loader.js',
      function: 'Module._extensions..js',
      line: 1097,
      method: '.js',
      native: false
    },
    {
      column: 32,
      file: 'internal/modules/cjs/loader.js',
      function: 'Module.load',
      line: 933,
      method: 'load',
      native: false
    },
    {
      column: 14,
      file: 'internal/modules/cjs/loader.js',
      function: 'Module._load',
      line: 774,
      method: '_load',
      native: false
    },
    {
      column: 19,
      file: 'internal/modules/cjs/loader.js',
      function: 'Module.require',
      line: 957,
      method: 'require',
      native: false
    },
    {
      column: 18,
      file: 'internal/modules/cjs/helpers.js',
      function: 'require',
      line: 88,
      method: null,
      native: false
    },
    {
      column: 23,
      file: '/Users/suvamgayen/My Project/go-mart-backend/routes/payment.router.js',
      function: null,
      line: 6,
      method: null,
      native: false
    },
    {
      column: 30,
      file: 'internal/modules/cjs/loader.js',
      function: 'Module._compile',
      line: 1068,
      method: '_compile',
      native: false
    },
    {
      column: 10,
      file: 'internal/modules/cjs/loader.js',
      function: 'Module._extensions..js',
      line: 1097,
      method: '.js',
      native: false
    },
    {
      column: 32,
      file: 'internal/modules/cjs/loader.js',
      function: 'Module.load',
      line: 933,
      method: 'load',
      native: false
    },
    {
      column: 14,
      file: 'internal/modules/cjs/loader.js',
      function: 'Module._load',
      line: 774,
      method: '_load',
      native: false
    },
    {
      column: 19,
      file: 'internal/modules/cjs/loader.js',
      function: 'Module.require',
      line: 957,
      method: 'require',
      native: false
    },
    {
      column: 18,
      file: 'internal/modules/cjs/helpers.js',
      function: 'require',
      line: 88,
      method: null,
      native: false
    },
    {
      column: 21,
      file: '/Users/suvamgayen/My Project/go-mart-backend/app.js',
      function: null,
      line: 39,
      method: null,
      native: false
    },
    {
      column: 30,
      file: 'internal/modules/cjs/loader.js',
      function: 'Module._compile',
      line: 1068,
      method: '_compile',
      native: false
    }
  ],
  timestamp: '2022-04-16T14:29:35.342Z'
}
